@@ -3,6 +3,8 @@
 * Fixed pan/pan & select mismatch in defaults for toolbar icon and image
   control. Now both default to pan & select tool.
 * Remember selected image control tool between sessions.
+* Ensure that all intermediate TIFFs are written with only one strip to avoid
+  triggering bug in PDF::Builder creating corrupt PDF
 
 
 2.12.2 (01.07.2021):
